--- a/index.html
+++ b/index.html
@@ -2,11 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <link rel="apple-touch-icon" href="/logo192.png">
+  <link rel="manifest" href="/manifest.json">
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-45799926-9"></script>
+  <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[]</script>
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>Free Modern React Templates &amp; Components for building landing pages and UIs - Treact</title>
+  <meta name="description" content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. ">
+  <meta property="og:site_name" content="Treact">
+  <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages">
+  <meta property="og:description" content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. ">
+  <meta property="og:image" content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@owaiswiz">
+  <meta name="twitter:creator" content="@owaiswiz">
+  <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages">
+  <meta name="twitter:description" content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. ">
+  <meta name="twitter:image" content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png">
+  <script defer="defer" src="/static/js/main.8b5ace48.js"></script>
+  <style data-styled="active" data-styled-version="5.3.5"></style>
 </head>
 <body>
-  David Bowen~
+  <section>
+    <div class="row">
+      <nav>
+          <figure class="logo__img">
+            <img src="./assets/logo.svg" alt="">
+          </figure>
+          <a class="treact__link" rel="stylesheet" href="https://treact.owaiskhan.me/">Treact</a>
+          <a href="https://treact.owaiskhan.me/#">About</a>
+          <a href="https://treact.owaiskhan.me/#">Blog</a>
+          <a href="#">Pricing</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Login</a>
+          <a class="sign-up__anchor" href="#">Sign Up</a>
+      </nav>
+    </div>
+  </section>
+
 </body>
 </html>
