finished nav, added header

--- a/index.html
+++ b/index.html
@@ -28,22 +28,62 @@
   <style data-styled="active" data-styled-version="5.3.5"></style>
 </head>
 <body>
-  <section>
-    <div class="row">
-      <nav>
-          <figure class="logo__img">
-            <img src="./assets/logo.svg" alt="">
-          </figure>
-          <a class="treact__link" rel="stylesheet" href="https://treact.owaiskhan.me/">Treact</a>
-          <a href="https://treact.owaiskhan.me/#">About</a>
-          <a href="https://treact.owaiskhan.me/#">Blog</a>
-          <a href="#">Pricing</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Login</a>
-          <a class="sign-up__anchor" href="#">Sign Up</a>
+  <section id="navigation">
+    <nav>
+        <div class="row">
+          <ul>
+            <li>
+              <figure class="logo__img--wrapper">
+                <img class="logo__img" src="./assets/logo.svg" alt="">
+                <a class="treact__link" rel="stylesheet" href="https://treact.owaiskhan.me/">Treact</a>
+              </figure>
+            </li>
+            <div class="nav__links">
+              <li class="nav__link">
+                <a class="nav__link-anchor link__hover-effect link__hover-effect--black" href="https://treact.owaiskhan.me/#">About</a>
+              </li>
+              <li class="nav__link">
+                <a class="nav__link-anchor link__hover-effect link__hover-effect--black" href="https://treact.owaiskhan.me/#">Blog</a>
+              </li>
+              <li class="nav__link">
+                <a class="nav__link-anchor link__hover-effect link__hover-effect--black" href="#">Pricing</a>
+              </li class="nav__link">
+              <li class="nav__link">
+                <a class="nav__link-anchor link__hover-effect link__hover-effect--black" href="#">Contact Us</a>
+              </li>
+              <li class="nav__link">
+                <a class="nav__link-anchor link__hover-effect link__hover-effect--black" href="#">Login</a>
+              </li>
+              <li>
+                <a class="sign-up__anchor" href="#">Sign Up</a>
+              </li>
+            </div>
+          </ul>
+        </div>
       </nav>
-    </div>
   </section>
+  <section id="header">
+    <div class="row">
+      <div class="header__sections">
+        <div class="header__section">
+          <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+          <p class="p1">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and componants.</p>
+          <div class="get-started">
+            <input class="email__imput" type="email">
+            <button class="btn">Get Started</button>
+          </div>
+          <div class="partners__logos">
+            <p class="p2">OUR TRUSTED CUSTOMERS</p>
+            <img src="./assets/fortune trusted.png" alt="">
+          </div>
+        </div>
+        <div class="header__img">
+          <img src="./assets/sample img for landing page.svg" alt="">
+        </div>
+      </div>
+    </div>
 
+
+  </section>
 </body>
 </html>
