--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </li>
             </div>
           </ul>
-        </div>
+        </div> 
       </nav>
   </section>
   <section id="header">
@@ -69,7 +69,7 @@
           <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
           <p class="p1">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and componants.</p>
           <div class="get-started">
-            <input class="email__imput" type="email">
+            <input class="get-started__email" type="text" placeholder="Your E-mail Address">
             <button class="btn">Get Started</button>
           </div>
           <div class="partners__logos">
@@ -77,8 +77,10 @@
             <img src="./assets/fortune trusted.png" alt="">
           </div>
         </div>
-        <div class="header__img">
-          <img src="./assets/sample img for landing page.svg" alt="">
+        <div class="header__img--wrapper">
+          <figure class="header__img">
+            <img src="./assets/sample img for landing page.svg" alt="">
+          </figure>
         </div>
       </div>
     </div>
